
IN DEVELOPMENT
--------------

  CHANGES:

    * ``bzr log file`` has been changed. It now uses a different method
      for determining which revisions to show as merging the changes to
      the file. It now only shows revisions which merged the change
      towards your mainline. This simplifies the output, makes it faster,
      and reduces memory consumption.  (John Arbash Meinel)

    * ``bzr+http//`` will now optionally load plugins and write logs on the
      server. (Marius Kruger)

  FEATURES

  IMPROVEMENTS:

    * ``bzr annotate`` will now include uncommitted changes from the local
      working tree by default. Such uncommitted changes are given the
      revision number they would get if a commit was done, followed with a
      ? to indicate that its not actually known. (Robert Collins, #3439)

    * ``bzr branch`` now accepts a ``--standalone`` option, which creates a
      standalone branch regardless of the presence of shared repositories.
      (Daniel Watkins)

    * ``bzr push`` is faster in the case there are no new revisions to
      push.  It is also faster if there are no tags in the local branch.
      (Andrew Bennetts)

    * File changes during a commit will update the tree stat cache.
      (Robert Collins)

    * Location aliases can now accept a trailing path.  (Micheal Hudson)

    * New hooks ``Lock.hooks`` when LockDirs are acquired and released. 
      (Robert Collins, MartinPool)

    * Switching in heavyweight checkouts uses the master branch's context, not
      the checkout's context.  (Adrian Wilkins)

    * ``status`` on large trees is now faster, due to optimisations in the
      walkdirs code. Of particular note, the walkdirs code now performs
      a temporary ``chdir()`` while reading a single directory; if your
      platform has non thread-local current working directories (and is
      not windows which has its own implementation), this may introduce a